--- a/index.html
+++ b/index.html
@@ -19,20 +19,26 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav ms-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="poetry/poetry-landing.html">Poetry</a>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+							<a class="nav-link active" href="index.html">Home</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="./short-stories/short-stories-landing.html">Short Stories</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="./books/books-landing.html">Books</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#support">Support</a>
-						</li>
-					</ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="poetry/poetry-landing.html">Poetry</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./short-stories/short-stories-landing.html">Short Stories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./books/books-landing.html">Books</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#support">Support</a>
+                        </li>
+                        <li class="nav-item contrast-container">
+                        </li>
+                    </ul>
+                    
 				</div>
 			</div>
 		</nav>
