--- a/poetry/poetry-landing.html
+++ b/poetry/poetry-landing.html
@@ -19,6 +19,9 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+							<a class="nav-link" href="../index.html">Home</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link active" href="./poetry-landing.html">Poetry</a>
 						</li>
@@ -31,6 +34,8 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#support">Support</a>
 						</li>
+                        <li class="nav-item contrast-container">
+                        </li>
 					</ul>
 				</div>
 			</div>
