--- a/short-stories/short-stories-landing.html
+++ b/short-stories/short-stories-landing.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="../styles/main.css" />
 		<script src="../scripts/featured.js" defer></script>
+        <script src="../scripts/contrast.js" defer></script>
 	</head>
 	<body class="short-stories-page" style="background-color: #fdf0f5; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
 		<!-- Navigation -->
@@ -18,6 +19,9 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+							<a class="nav-link" href="../index.html">Home</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="../poetry/poetry-landing.html">Poetry</a>
 						</li>
@@ -30,6 +34,8 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#support">Support</a>
 						</li>
+                        <li class="nav-item contrast-container">
+                        </li>
 					</ul>
 				</div>
 			</div>
