--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="container">
 				<h2 class="mb-4 text-dark">Love what you read?</h2>
 				<p class="mb-4">Help keep the stories flowing. Your support means the world.</p>
-				<a href="https://buy.stripe.com/test_abc123" target="_blank" class="btn btn-lg btn-success fw-bold px-5 py-3">
+				<a href="./pages/payment.html" target="_blank" class="btn btn-lg btn-success fw-bold px-5 py-3">
 					💖 Support the Author on Stripe
 				</a>
 			</div>
