--- a/pages/payment.html
+++ b/pages/payment.html
@@ -67,6 +67,7 @@
         <!-- Submit -->
         <div class="text-center mt-4">
           <button type="submit" class="btn btn-success btn-lg px-5">Checkout</button>
+          <button class="btn btn-success btn-lg px-5"><a href="../index.html">home</a></button>
         </div>
       </form>
     </div>
