--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="description" content="Read original poetry, short stories, and full-length books. A creative platform for writers and readers who love storytelling and lyrical writing." />
+		<meta name="keywords" content="poetry, short stories, original books, creative writing, literature, storytelling, modern poetry, indie authors" />
+		<meta name="author" content="Kirstin L" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Kirstin's Poetry & Storytelling</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
