--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="keywords" content="poetry, short stories, original books, creative writing, literature, storytelling, modern poetry, indie authors" />
 		<meta name="author" content="Kirstin L" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="google-site-verification" content="D5RtePjPETM4J_ZBRpRW7gcc19eYc-EFjmt8jT9ucQU" />
 		<title>Kirstin's Poetry & Storytelling</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="styles/main.css" />
