--- a/short-stories/echoes-in-stardust/table_of_contents.html
+++ b/short-stories/echoes-in-stardust/table_of_contents.html
@@ -57,7 +57,7 @@
 		</div>
 
 		<div class="d-flex justify-content-center gap-3 mt-4">
-			<a href="./table_of_contents.html" class="btn btn-secondary">Previous Page</a>
+			<a href="./echoes-in-stardust.html" class="btn btn-secondary">Previous Page</a>
 			<a href="./the-veil-of-faith/part1.html" class="btn btn-primary">Next Page</a>
 		</div>
 	</div>
