act 1 and part 11 complete styles applies word wrap properly

--- a/short-stories/echoes-in-stardust/table_of_contents.html
+++ b/short-stories/echoes-in-stardust/table_of_contents.html
@@ -20,8 +20,8 @@
 			<pre>
 <strong>The Veil of Faith</strong>
 <a href="./the-veil-of-faith/part1.html">1. Opening Scene</a>
-<a href="./the-veil-of-faith/part2.html">2. Introduce the Mother</a>
-<a href="./the-veil-of-faith/part3.html">3. Introduce the Daughter</a>
+<a href="./the-veil-of-faith/part2.html">2. Mothers Hope</a>
+<a href="./the-veil-of-faith/part3.html">3. Elowen Among the Leaves</a>
 <a href="./the-veil-of-faith/part4.html">4. The Cursed Test</a>
 <a href="./the-veil-of-faith/part5.html">5. Lore of the Star</a>
 <a href="./the-veil-of-faith/part6.html">6. The Mother’s Conviction</a>
