--- a/short-stories/echoes-in-stardust/the-veil-of-faith/part2.html
+++ b/short-stories/echoes-in-stardust/the-veil-of-faith/part2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Part 2 – Introduce the Mother</title>
+	<title>Part 2 – Mothers Hope</title>
 	<link rel="stylesheet" href="../../../styles/main.css" />
 	<link rel="stylesheet" href="../../../styles/poetry.css" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -14,7 +14,7 @@
 	<a href="../../../index.html" class="home-button">🏠 Home</a>
 	<div class="poem-container">
         <button class="audio-button" onclick="playPoemAudio('echoes-in-stardust/part2')">🔊</button>
-		<h1 class="short-title">Part 2: Introduce the Mother – Liora</h1>
+		<h1 class="short-title">Part 2: Mothers Hope – Liora</h1>
 
 		<div class="short-text">
 <pre>
