--- a/short-stories/echoes-in-stardust/the-veil-of-faith/part3.html
+++ b/short-stories/echoes-in-stardust/the-veil-of-faith/part3.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Part 3 – Introduce the Daughter</title>
+	<title>Part 3 – Elowen Among the Leaves</title>
 	<link rel="stylesheet" href="../../../styles/main.css" />
 	<link rel="stylesheet" href="../../../styles/poetry.css" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -14,7 +14,7 @@
 	<a href="../../../index.html" class="home-button">🏠 Home</a>
 	<div class="poem-container">
 		<button class="audio-button" onclick="playPoemAudio('echoes-in-stardust/part3')">🔊</button>
-		<h1 class="short-title">Part 3: Introduce the Daughter – Elowen</h1>
+		<h1 class="short-title">Part 3: Elowen Among the Leaves – Elowen</h1>
 
 		<div class="short-text">
 <pre>
