complete book and funnies added partually

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./books/books-landing.html">Books</a>
                         </li>
+						<li class="nav-item">
+                            <a class="nav-link" href="./funnies/funnies-landing-page.html">Funnies and More</a>
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#support">Support</a>
+                            <a class="nav-link" href="./pages/payment.html">Support</a>
                         </li>
                         <li class="nav-item contrast-container">
                         </li>
