--- a/short-stories/echoes-in-stardust/table_of_contents.html
+++ b/short-stories/echoes-in-stardust/table_of_contents.html
@@ -14,6 +14,10 @@
 	<a href="../../index.html" class="home-button">🏠 Home</a>
 	<div class="poem-container">
 		<h1 class="short-title">Echoes in Stardust</h1>
+        <div class="d-flex justify-content-center gap-3 mt-4">
+			<a href="./echoes-in-stardust.html" class="btn btn-secondary">Premise</a>
+			<a href="./the-veil-of-faith/part1.html" class="btn btn-primary">First Page</a>
+		</div>
 		<h2 class="text-center mb-4">Table of Contents</h2>
 
 		<div class="short-text">
@@ -35,30 +39,32 @@
 <a href="./the-road-of-doubt/part12.html">12. Ritual Campsites</a>
 <a href="./the-road-of-doubt/part13.html">13. Other “Cursed” Children</a>
 <a href="./the-road-of-doubt/part14.html">14. Small Wonders</a>
-<a href="./the-road-of-doubt/part15.html">15. The Mother Begins to Observe</a>
+<a href="./the-road-of-doubt/part15.html">15. Observation</a>
 <a href="./the-road-of-doubt/part16.html">16. Stories from the Past</a>
 <a href="./the-road-of-doubt/part17.html">17. A Child is Taken Early</a>
 <a href="./the-road-of-doubt/part18.html">18. The Daughter’s Questions</a>
 <a href="./the-road-of-doubt/part19.html">19. An Outcast’s Warning</a>
-<a href="./the-road-of-doubt/part20.html">20. The Mother Sleeps Uneasily</a>
+<a href="./the-road-of-doubt/part20.html">20. Revelation</a>
+<a href="./the-road-of-doubt/part21.html">21. The Restless Night</a>
+
 
 <strong>The Light Unbound</strong>
-<a href="./the-light-unbound/part21.html">21. Arrival at the Star Grounds</a>
-<a href="./the-light-unbound/part22.html">22. Ceremony Begins</a>
-<a href="./the-light-unbound/part23.html">23. The Daughter Resists</a>
-<a href="./the-light-unbound/part24.html">24. The Mother Defies Them</a>
-<a href="./the-light-unbound/part25.html">25. The Crowd Reacts</a>
-<a href="./the-light-unbound/part26.html">26. The Star Awakens</a>
-<a href="./the-light-unbound/part27.html">27. Stardust’s Whisper</a>
-<a href="./the-light-unbound/part28.html">28. The Demon Revealed</a>
-<a href="./the-light-unbound/part29.html">29. The Shattering</a>
-<a href="./the-light-unbound/part30.html">30. Stardust Rises</a>
+<a href="./the-light-unbound/part22.html">22. Arrival at the Star Grounds</a>
+<a href="./the-light-unbound/part23.html">23. Ceremony Begins</a>
+<a href="./the-light-unbound/part24.html">24. The Daughter Resists</a>
+<a href="./the-light-unbound/part25.html">25. The Mother Defies Them</a>
+<a href="./the-light-unbound/part26.html">26. Confrontation</a>
+<a href="./the-light-unbound/part27.html">27. The Star Awakens</a>
+<a href="./the-light-unbound/part28.html">28. Stardust’s Whisper</a>
+<a href="./the-light-unbound/part29.html">29. The Demon Revealed</a>
+<a href="./the-light-unbound/part30.html">30. The Shattering</a>
+<a href="./the-light-unbound/part31.html">31. Stardust Rises</a>
 			</pre>
 		</div>
 
 		<div class="d-flex justify-content-center gap-3 mt-4">
-			<a href="./echoes-in-stardust.html" class="btn btn-secondary">Previous Page</a>
-			<a href="./the-veil-of-faith/part1.html" class="btn btn-primary">Next Page</a>
+			<a href="./echoes-in-stardust.html" class="btn btn-secondary">Premise</a>
+			<a href="./the-veil-of-faith/part1.html" class="btn btn-primary">First Page</a>
 		</div>
 	</div>
 </body>
