--- a/short-stories/echoes-in-stardust/the-road-of-doubt/part11.html
+++ b/short-stories/echoes-in-stardust/the-road-of-doubt/part11.html
@@ -14,6 +14,10 @@
 	<a href="../../../index.html" class="home-button">🏠 Home</a>
 	<div class="poem-container">
 		<button class="audio-button" onclick="playPoemAudio('echoes-in-stardust/part11')">🔊</button>
+        <div class="d-flex justify-content-between mt-4">
+			<a href="../the-veil-of-faith/part10.html" class="btn btn-secondary">⬅ Previous</a>
+			<a href="part12.html" class="btn btn-primary">Next ➡</a>
+		</div>
 		<h1 class="short-title">Part 11: Into the Wilderness</h1>
 
 		<div class="short-text">
