--- a/short-stories/echoes-in-stardust/the-veil-of-faith/part1.html
+++ b/short-stories/echoes-in-stardust/the-veil-of-faith/part1.html
@@ -14,6 +14,10 @@
 	<a href="../../../index.html" class="home-button">🏠 Home</a>
 	<div class="poem-container">
         <button class="audio-button" onclick="playPoemAudio('echoes-in-stardust/pat1')">🔊</button>
+        <div class="d-flex justify-content-between mt-4">
+			<a href="../table_of_contents.html" class="btn btn-secondary">⬅ Back to Contents</a>
+			<a href="part2.html" class="btn btn-primary">Next ➡</a>
+		</div>
 		<h1 class="short-title">Part 1: The Calm Before Tradition</h1>
 	<div class="short-text">
 <pre>
