--- a/short-stories/echoes-in-stardust/the-veil-of-faith/part3.html
+++ b/short-stories/echoes-in-stardust/the-veil-of-faith/part3.html
@@ -14,6 +14,10 @@
 	<a href="../../../index.html" class="home-button">🏠 Home</a>
 	<div class="poem-container">
 		<button class="audio-button" onclick="playPoemAudio('echoes-in-stardust/part3')">🔊</button>
+        <div class="d-flex justify-content-between mt-4">
+			<a href="part2.html" class="btn btn-secondary">⬅ Previous</a>
+			<a href="part4.html" class="btn btn-primary">Next ➡</a>
+		</div>
 		<h1 class="short-title">Part 3: Elowen Among the Leaves – Elowen</h1>
 
 		<div class="short-text">
