changes readjustments and a teaser

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<link rel="stylesheet" href="styles/main.css" />
         <script src="scripts/featured.js" defer></script>
         <script src="scripts/contrast.js" defer></script>
+		<script src="scripts/update-loader.js" defer></script>
+
 	</head>
 
 	<body>
@@ -54,6 +56,12 @@
 				<p class="lead">Poetry that speaks. Stories that stay. A journey in every line.</p>
 			</div>
 		</header>
+
+		<section id="site-update" class=" text-dark py-3">
+			<div class="container text-center" id="latest-update">
+				<!-- Latest update will be injected here by JS -->
+			</div>
+		</section>
 
 		<!-- Featured Titles Section -->
 		<section class="container my-5">
