--- a/pages/changes.html
+++ b/pages/changes.html
@@ -17,6 +17,19 @@
 
         <div class="changelog-entry border rounded p-4 mb-4 bg-white shadow-sm">
 			<h3 class="h5 fw-bold">April 17, 2025</h3>
+			<pre> 
+🌸🌷🌼💐🌞🐣🐰💖  
+**Happy Easter!**  
+Wishing you a day full of joy, blooming flowers, sunshine, sweet treats, and love.  
+May your heart hop with happiness today and always!  
+🌸🌷🌼💐🌞🐣🐰💖
+
+new easter poem now available <a href="../poetry/easter-poem-2025.html" >chect it out</a>
+            </pre>
+		</div>
+
+        <div class="changelog-entry border rounded p-4 mb-4 bg-white shadow-sm">
+			<h3 class="h5 fw-bold">April 17, 2025</h3>
 			<p>UPCOMMING Echoes in Stardust - </p>
 		</div>
 
