--- a/pages/changes.html
+++ b/pages/changes.html
@@ -24,7 +24,7 @@ Wishing you a day full of joy, blooming flowers, sunshine, sweet treats, and lov
 May your heart hop with happiness today and always!  
 🌸🌷🌼💐🌞🐣🐰💖
 
-new easter poem now available <a href="https://https://princess8815.github.io/poetry/poetry/easter-poem-2025.html" >chect it out</a>
+new easter poem now available <a href="https://princess8815.github.io/poetry/poetry/easter-poem-2025.html" >chect it out</a>
             </pre>
 		</div>
 
