--- a/pages/changes.html
+++ b/pages/changes.html
@@ -16,7 +16,12 @@
 		<h1 class="mb-4 text-center">Site Changelog</h1>
 
         <div class="changelog-entry border rounded p-4 mb-4 bg-white shadow-sm">
-			<h3 class="h5 fw-bold">April 17, 2025</h3>
+            <h3 class="h5 fw-bold">April 26, 2025</h3>
+            <p>added 3 new poems and reorganized poems list into full alphabetical order (with new and adult sections handled correctly)</p>
+        </div>
+
+        <div class="changelog-entry border rounded p-4 mb-4 bg-white shadow-sm">
+			<h3 class="h5 fw-bold">April 20, 2025</h3>
 			<pre> 
 🌸🌷🌼💐🌞🐣🐰💖  
 **Happy Easter!**  
