acc and sort integration

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="scripts/featured.js" defer></script>
         <script src="scripts/contrast.js" defer></script>
 		<script src="scripts/update-loader.js" defer></script>
+		<script src="scripts/auth.js" defer></script>
 
 	</head>
 
@@ -26,6 +27,10 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
+						<li class="nav-item" id="auth-buttons">
+							<!-- JS will fill this with Login/Register or Account -->
+						</li>
+						  
                         <li class="nav-item">
 							<a class="nav-link active" href="index.html">Home</a>
 						</li>
