poem ratings system

--- a/poetry/from-shadows-to-light.html
+++ b/poetry/from-shadows-to-light.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="../styles/poetry.css" />
 		<script src="../scripts/poetry.js" defer></script>
           <script src="../scripts/contrast.js" defer></script>
+		  <script src="../scripts/auth.js" defer></script>
 	</head>
 	<body class="poem-page">
         <a href="../index.html" class="home-button">🏠 Home</a>
