--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	</head>
 
-	<body>
+	<body id="root">
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-gradient-pink sticky-top">
 			<div class="container-fluid">
