--- a/poetry/more-then-a-word.html
+++ b/poetry/more-then-a-word.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../styles/main.css" />
 		<link rel="stylesheet" href="../styles/poetry.css" />
 		<script src="../scripts/poetry.js" defer></script>
+		<script src="../scripts/auth.js" defer></script>
 	</head>
 	<body class="poem-page">
         <a href="../index.html" class="home-button">🏠 Home</a>
