--- a/poetry/poetry-landing.html
+++ b/poetry/poetry-landing.html
@@ -66,6 +66,8 @@
 							<option value="titleDesc">Title (Z–A)</option>
 							<option value="dateAsc">Date (Oldest First)</option>
 							<option value="dateDesc">Date (Newest First)</option>
+							<option value="ratingAsc">Rating (Lowest → Highest)</option>
+							<option value="ratingDesc">Rating (Highest → Lowest)</option>
 						</select>
 					</div>
 					<div class="col-md-3 mb-2">
