--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="google-site-verification" content="D5RtePjPETM4J_ZBRpRW7gcc19eYc-EFjmt8jT9ucQU" />
 		<title>Kirstin's Poetry & Storytelling</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 		<link rel="stylesheet" href="styles/main.css" />
         <script src="scripts/featured.js" defer></script>
         <script src="scripts/contrast.js" defer></script>
@@ -89,8 +90,12 @@
 
 		<!-- Footer -->
 		<footer class="bg-dark text-white text-center py-4">
-			<p class="mb-0">&copy; 2025 Kirstin Lathrop | Made with ❤️ and Bootstrap</p>
+			<p class="mb-2">&copy; 2025 Kirstin Lathrop | Made with ❤️ and Bootstrap</p>
+			<a href="https://x.com/KTransgirl" target="_blank" class="text-white fs-4 me-2" aria-label="Follow on Twitter">
+				<i class="fab fa-twitter"></i>
+			</a>
 		</footer>
+		
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 	</body>
