--- a/short-stories/echoes-in-stardust/the-veil-of-faith/part1.html
+++ b/short-stories/echoes-in-stardust/the-veil-of-faith/part1.html
@@ -21,7 +21,44 @@
 		<h1 class="short-title">Part 1: The Calm Before Tradition</h1>
 	<div class="short-text">
 <pre>
-coming May 24, 2025
+The village of Auris stirred with a sacred stillness.
+
+Smoke curled from thatched chimneys as sunlight kissed the rooftops, casting 
+shadows long and soft over quiet streets. Prayer chimes hung from doorframes, 
+tinkling with the early breeze — their song light, hopeful.
+
+Today was not a market day. It was not a festival. But it was a day of meaning.
+
+It was the day the elders would announce the time of testing.
+
+Each summer, those who had turned twelve — the age when the Curses first began 
+to show — would undergo the trials of the Light. The tests, handed down through 
+generations, would determine if the ancient burden stirred within them.
+
+And if it did, they would walk the path.  
+They would be guided to the Star.
+
+In the central courtyard, families gathered with quiet smiles. Children stood tall, 
+their tunics freshly pressed, their parents’ hands resting on their shoulders. 
+Pride shimmered in their eyes. Nervous pride, yes — but pride all the same.
+
+From the steps of the stone dais, Elder Mariun raised his arms.
+
+He was a figure of reverence, his robes bright with sacred embroidery — each 
+thread a prayer, each symbol a memory of those who had been cleansed before.
+
+"The Season begins," he declared, his voice even and kind. "Let the Light fall upon 
+us with grace. Let the tests reveal what is hidden, so that healing may begin."
+
+A collective exhale passed through the crowd.
+
+No one questioned the ritual. It had saved so many. The Cursed were not cast away 
+— they were brought back whole. Freed from chaos, anchored in peace.
+
+To be tested was not a sentence. It was a blessing.
+
+And somewhere beyond the hills, hidden deep within the wilderness, the Star pulsed softly —  
+a silent guardian, waiting to receive the chosen.
 </pre>
 		</div>
 
