echoes in stardust release

--- a/pages/changes.html
+++ b/pages/changes.html
@@ -16,6 +16,16 @@
 		<h1 class="mb-4 text-center">Site Changelog</h1>
 
 		<div class="changelog-entry border rounded p-4 mb-4 bg-white shadow-sm">
+			<h3 class="h5 fw-bold">📅 May 24, 2025</h3>
+			<p>
+			  <strong>🚀 Release Alert:</strong>  
+			  <span style="font-size: 1.1em;">✨ <em>Echoes in Stardust</em> has officially launched!</span>  
+			  <br>🌌 Dive into a tale of cosmic wonder, hidden truths, and star-lit destinies.<br><br>
+			  🔗 <a href="https://princess8815.github.io/poetry/short-stories/echoes-in-stardust/echoes-in-stardust.html">Read it now</a> and let the journey begin 🌠
+			</p>
+		  </div>		  
+
+		<div class="changelog-entry border rounded p-4 mb-4 bg-white shadow-sm">
 			<h3 class="h5 fw-bold">May 3, 2025</h3>
 			<p><strong>New Features Summary:</strong> Added poem sorting, searching, and filtering. Introduced user accounts with registration, login, and the ability to rate poems.</p>
 		  </div>
