--- a/funnies/funnies-landing-page.html
+++ b/funnies/funnies-landing-page.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Poetry</title>
+		<title>Funnies and more</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="../styles/main.css" />
 		<script src="../scripts/featured.js" defer></script>
@@ -32,7 +32,7 @@
 							<a class="nav-link" href="../books/books-landing.html">Books</a>
 						</li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./funnies/funnies-landing-page.html">Funnies and More</a>
+                            <a class="nav-link active" href="../funnies/funnies-landing-page.html">Funnies and More</a>
                         </li>
 						<li class="nav-item">
 							<a class="nav-link" href="#support">Support</a>
