--- a/poetry/poetry-landing.html
+++ b/poetry/poetry-landing.html
@@ -36,6 +36,9 @@
 							<a class="nav-link" href="../books/books-landing.html">Books</a>
 						</li>
 						<li class="nav-item">
+                            <a class="nav-link" href="../funnies/funnies-landing-page.html">Funnies and More</a>
+                        </li>
+						<li class="nav-item">
 							<a class="nav-link" href="#support">Support</a>
 						</li>
                         <li class="nav-item contrast-container">
