--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
             display: inline-block;
             margin-top: 1.5em;
             padding: 10px 20px;
-            background-color: #b86bd6;
+            background: linear-gradient(45deg, #ff69b4, #ff1493);
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -34,10 +34,18 @@
         a:hover {
             background-color: #9b58ba;
         }
+
+        .gradient-text {
+            font-size: 2.5em;
+            font-weight: bold;
+            background: linear-gradient(45deg, #ff69b4, #ff1493);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
     </style>
 </head>
 <body>
-    <h1>Page Not Found</h1>
+    <h1 class="gradient-text">Page Not Found</h1>
     <p>The page you’re looking for doesn’t exist or was moved.</p>
     <a href="/poetry/">Return Home</a>
 </body>
