--- a/pages/changes.html
+++ b/pages/changes.html
@@ -15,6 +15,21 @@
 	<main class="container my-5">
 		<h1 class="mb-4 text-center">Site Changelog</h1>
 
+		<div class="changelog-entry border rounded p-4 mb-4 bg-white shadow-sm"> 
+			<h3 class="h5 fw-bold">📅 November 12, 2025</h3>
+			<p>
+				<strong>⚙️ Major Site Overhaul:</strong><br>
+				<span style="font-size: 1.1em;">
+				🚧 <em>Princess Poetry & Stories</em> has undergone a <strong>massive infrastructure update</strong>!
+				</span>
+				<br><br>
+				🌸 The site is now <strong>easier than ever to update and expand</strong>, allowing faster addition of new poems and stories.<br>
+				🔗 However, this change has <strong>restructured internal URLs</strong> — meaning <em>older direct links to individual poems may no longer work.</em><br><br>
+				✨ This upgrade paves the way for smoother content creation and future features across the <em>Poetry</em> and <em>Short Stories</em> collections.
+			</p>
+		</div>
+
+
 		<div class="changelog-entry border rounded p-4 mb-4 bg-white shadow-sm">
 			<h3 class="h5 fw-bold">📅 May 24, 2025</h3>
 			<p>
