--- a/pages/changes.html
+++ b/pages/changes.html
@@ -23,9 +23,11 @@
 				🚧 <em>Princess Poetry & Stories</em> has undergone a <strong>massive infrastructure update</strong>!
 				</span>
 				<br><br>
+				hotfix
 				🌸 The site is now <strong>easier than ever to update and expand</strong>, allowing faster addition of new poems and stories.<br>
 				🔗 However, this change has <strong>restructured internal URLs</strong> — meaning <em>older direct links to individual poems may no longer work.</em><br><br>
 				✨ This upgrade paves the way for smoother content creation and future features across the <em>Poetry</em> and <em>Short Stories</em> collections.
+
 			</p>
 		</div>
 
